@@ -21,10 +21,13 @@
 /// \author Chris Saunders
 ///
 
-#include "common/test/EstimateSVLoci_util.hh"
 #include "boost/test/unit_test.hpp"
 
-BOOST_AUTO_TEST_SUITE( test_SVLocusScanner_ScanRegion)
+#include "testUtil.hh"
+#include "htsapi/SimpleAlignment_bam_util.hh"
+#include "manta/SVLocusScanner.cpp"
+
+BOOST_AUTO_TEST_SUITE( test_SVLocusScanner )
 
 // Test all of the paths possible for core read filtering.
 BOOST_AUTO_TEST_CASE( test_isReadFilteredCore ) {
@@ -426,6 +429,35 @@ BOOST_AUTO_TEST_CASE( test_SemiAlignedReads ) {
     buildBamRecord(pos49bpApartRead, 0, alignPos, 0, alignPos-49, 20, 15, "20M", semiQuerySeq);
     //mateUnmappedRead.toggle_is_mate_unmapped();
     BOOST_REQUIRE(! rnaScanner->isSemiAlignedEvidence(pos49bpApartRead, semiAlignment, ref));
+}
+
+BOOST_AUTO_TEST_CASE( test_getSVCandidatesFromReadIndels )
+{
+    const bool isRNA(false);
+    const bool isStranded(true);
+    const ReadScannerOptions opt;
+    const ReadScannerDerivOptions dopt(opt,isRNA,isStranded);
+
+    ALIGNPATH::path_t inputPath;
+    cigar_to_apath("100M2000D100M",inputPath);
+
+    bam_record bamRead;
+    bam1_t* bamDataPtr(bamRead.get_data());
+    edit_bam_cigar(inputPath,*bamDataPtr);
+
+    SimpleAlignment align(getAlignment(bamRead));
+    align.tid = 0;
+
+    std::vector<SVObservation> candidates;
+
+    bam_header_info hdr_info;
+    hdr_info.chrom_data.emplace_back("chr1", 1000000);
+
+    getSVCandidatesFromReadIndels(opt, dopt, align, hdr_info, SourceOfSVEvidenceInDNAFragment::UNKNOWN, candidates);
+
+    BOOST_REQUIRE_EQUAL(candidates.size(),1u);
+    BOOST_REQUIRE(candidates[0].bp1.interval.range.is_pos_intersect(100));
+    BOOST_REQUIRE(candidates[0].bp2.interval.range.is_pos_intersect(2100));
 }
 
 BOOST_AUTO_TEST_SUITE_END()
