@@ -26,15 +26,12 @@
 ///
 /// \author Chris Saunders
 ///
-/// \brief GenomeInterval identifies a unique contiguous chromosomal region.
+/// \brief GenomeInterval identifies a contiguous chromosomal region.
 ///
 /// \details GenomeInterval identifies single contiguous chromosome range. All internal locations use a chromosome
 /// index number. GenomeInterval uses boost::serialize to save/load the class.
 struct GenomeInterval
 {
-    /// \brief GenomeInverval represents a single chromosome range
-    ///
-    /// All internal locations use a chromosome index number
     GenomeInterval(
         const int32_t initTid = 0,
         const pos_t beginPos = 0,
@@ -45,8 +42,8 @@ struct GenomeInterval
 
     /// \brief Identify if the GenomeIntersect Intersects with another GenomeInterval
     ///
-    /// 1. The ids must be the same.
-    /// 2. The range of the GenomeIntervals must overlap by more than 1 BP.
+    /// 1. The ids must be the same
+    /// 2. The range of the GenomeIntervals must overlap
     bool
     isIntersect(const GenomeInterval& gi) const
     {
@@ -54,31 +51,23 @@ struct GenomeInterval
         return range.is_range_intersect(gi.range);
     }
 
-    /// \brief Identify if the GenomeInterval range is less than the input GenomeInterval
-    ///
-    /// 1. start < start
-    /// 2. if start == start, then end < end
     bool
     operator<(const GenomeInterval& rhs) const
     {
-        if (tid<rhs.tid) return true;
+        if (tid < rhs.tid) return true;
         if (tid == rhs.tid)
         {
-            return (range<rhs.range);
+            return (range < rhs.range);
         }
         return false;
     }
 
-    /// \brief Identify if the GenomeIntervals are identical
-    ///
-    /// 1. id == id && range == range
     bool
     operator==(const GenomeInterval& rhs) const
     {
         return ((tid==rhs.tid) && (range==rhs.range));
     }
 
-    /// \brief Set the id to 0 and clear the chromosome range.
     void
     clear()
     {
@@ -86,14 +75,13 @@ struct GenomeInterval
         range.clear();
     }
 
-    /// \brief Serialize the GenomeInterval
     template<class Archive>
     void serialize(Archive& ar, const unsigned /* version */)
     {
         ar& tid& range;
     }
 
-    /// \brief Chromsome range identifier
+    /// \brief Samtools chromosome index (samtools)
     int32_t tid;
     /// \brief Chromosome interval range
     known_pos_range2 range;
